# audio_processing

./: .editorconfig  .gitattributes  README.md  prompt.md  pyproject.toml
.bookloop/: state.json
.github/ISSUE_TEMPLATE/: teaching_pilot_report.yml
.github/workflows/: book-examples.yml
book/: .gitignore  BOOK_PLAN.md  EXTERNAL_REVIEW.md  GLOSSARY.md  Makefile  NOTATION.md  REVIEW_NOTES.md  TEACHING_PILOT.md  TEACHING_PILOT_RECRUIT.md  TEACHING_PILOT_RUN1.md  bibliography.bib  book.yml  metadata.yaml  requirements-dev.txt
book/.bookloop/: state.json
book/audio_demos/: README.md
book/audio_toolkit/: __init__.py  __main__.py  _quality.py  effects.py  filters.py  io.py  meter.py  osc.py  resample.py  spectral.py  synthesis.py
book/chapters/: 00-preface.md  01-what-is-audio-signal-processing.md  02-signals-time-and-samples.md  03-sampling-quantization-and-digital-audio.md  04-sinusoidal-signals-and-complex-numbers.md  05-fourier-representation.md  06-dft-fft-and-spectral-analysis.md  07-windowing-leakage-and-resolution.md  08-stft-spectrograms-and-time-frequency-analysis.md  09-convolution-and-impulse-responses.md  10-filters-fir-iir-and-z-transform.md  11-delay-lines-comb-filters-and-allpass-filters.md  12-phase-group-delay-and-minimum-phase.md  13-envelopes-loudness-and-dynamics.md  14-resampling-interpolation-and-sample-rate-conversion.md  15-audio-features-and-descriptors.md  16-pitch-onsets-and-rhythm.md  17-musical-signal-representations.md  18-synthesis-representations.md  19-physical-modeling-representations.md  20-neural-audio-representations.md  (+11 more)
(+64 files in other folders)
